

#add_executable(test_gtest test_gtest.cc)
#add_executable(test_benchmark test_benchmark.cc)

#target_include_directories(test_gtest PRIVATE ${gtest_SOURCE_DIR}/include ${gtest_SOURCE_DIR})
#target_include_directories(test_gtest PRIVATE ${gmock_SOURCE_DIR}/include ${gmock_SOURCE_DIR})
#target_include_directories(test_gtest PRIVATE ${CMAKE_SOURCE_DIR}/include)
